# trevorb_data_repo

./: .gitignore  .jjignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api_cli/: .env.example  Cargo.toml  README.md  test.json
api_cli/examples/: env_loader_example.rs
api_cli/src/: main.rs
api_cli/src/extractor/: api.rs  loader.rs  mod.rs
api_cli/src/utils/: env_loader.rs  error.rs  mod.rs
config/: airflow.cfg
dags/nasa/: apod.py  rust.py
dags/spacedevs/: spacedevs_launch_library.py  spacedevs_news.py  spaceflight_news_api.py
