[project]
name = "trevorb-data-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "apache-airflow>=3.1.3",
    "apache-airflow-providers-amazon>=9.18.1",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "graphviz>=0.21",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.5.0",
    "marimo>=0.18.3",
    "pandas>=2.3.3",
    "polars[pandas]>=1.35.2",
    "pyarrow>=22.0.0",
    "pyiceberg>=0.10.0",
    "pytest>=9.0.2",
]
